--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
+        "vue-line-clamp": "^1.3.2",
         "vue-router": "^3.0.2",
         "vue-socket.io": "^3.0.4",
         "vue-toasted": "^1.1.26",
